bug 263 - eliminating problem with overlapping tree diagrams when diagram is clicked twice in fast succession (replacing rather than appending tree contents to the panel document) also, adding language-specific stylesheet to the tree

--- a/basic-reader/trunk/skin/alph-query.css
+++ b/basic-reader/trunk/skin/alph-query.css
@@ -48,7 +48,6 @@ body {
 }
 
 .answer {
-    font-family: Georgia,serif;
     font-style: italic;
 }
 
